<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_direction"
            android:title="@string/direction" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_wagon"
            android:title="@string/wagon" />
        <item
            android:id="@+id/nav_sell"
            android:title="@string/sell" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_directions"
            android:title="@string/directions" />
        <item
            android:id="@+id/nav_inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_products"
            android:title="@string/products" />
    </group>
</menu>
