<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DirectionActivity">

    <FrameLayout
        android:id="@+id/AcDirectionFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/AcDirectionFlSelectedTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_selected_train"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AcDirectionSelectedTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="4"
                android:text="@string/no_select"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AcDirectionFlSelectedTrain" />

            <TextView
                android:id="@+id/AcDirectionFlSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_selected_date"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AcDirectionSelectedTrain" />

            <TextView
                android:id="@+id/AcDirectionSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/no_select"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AcDirectionFlSelectedDate" />

            <TextView
                android:id="@+id/AcDirectionFlSelectedValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_selected_valid"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AcDirectionSelectedDate" />

            <TextView
                android:id="@+id/AcDirectionSelectedValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="4"
                android:text="@string/unknown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AcDirectionFlSelectedValid" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/AcDirectionFrSearch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="1"
                android:background="@color/secondaryColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"
                    android:clickable="false"
                    app:srcCompat="@mipmap/ic_search" />

                <AutoCompleteTextView
                    android:id="@+id/AcDirectionSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/direction_search"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:singleLine="true">

                    <requestFocus />

                </AutoCompleteTextView>

            </LinearLayout>
        </FrameLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="15dp"
            android:background="@color/secondaryColor"
            android:onClick="clickDatepicker"
            android:paddingHorizontal="15dp"
            android:text="@string/direction_datepicker"
            app:layout_constraintLeft_toLeftOf="@id/AcDirectionFrSearch"
            app:layout_constraintRight_toRightOf="@id/AcDirectionFrSearch"
            app:layout_constraintTop_toBottomOf="@id/AcDirectionFrSearch" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:onClick="clickStartLoad"
            android:paddingHorizontal="15dp"
            android:text="@string/direction_start_load"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <!--navigation drawer menu-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/secondaryColor"
            android:fitsSystemWindows="false"
            android:paddingTop="15dp"
            app:itemIconTint="@color/secondaryLightColor"
            app:itemTextAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:itemTextColor="@color/mdtp_white"
            app:menu="@menu/navigation" />

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>