<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/ItemStationLytParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/ItemStationTitleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/number_char"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ItemStationNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/ItemStationTitleNumber"
            app:layout_constraintLeft_toRightOf="@id/ItemStationTitleNumber" />

        <TextView
            android:id="@+id/ItemStationStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintBaseline_toBaselineOf="@id/ItemStationNumber"
            app:layout_constraintLeft_toRightOf="@id/ItemStationNumber" />

        <TextView
            android:id="@+id/ItemStationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/ItemStationNumber"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/ItemStationLinearTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/ItemStationStation"
            app:layout_constraintTop_toBottomOf="@id/ItemStationNumber">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_arrival" />

            <TextView
                android:id="@+id/ItemStationTitleStay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_stop" />

            <TextView
                android:id="@+id/ItemStationTitleDeparture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_departure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ItemStationLinearTitles">

            <TextView
                android:id="@+id/ItemStationArrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ItemStationStay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ItemStationDeparture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>